# itchpy

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
examples/: v50.itch
itchpy/: _version.py  base.h  cpp_gen.py  itch_ast.py  itchc.py  lexer.py  parser.py
tests/: conftest.py  test_compiler.py  test_gen.py  test_lexer.py  test_parser.py
