[metadata]
name = itchpy
description = Python based parser generator for ITCH messages
long_description = file: README.md
long_description_content_type = text/markdown


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = itchpy/_version.py
versionfile_build = itchpy/_version.py